--- a/PI_Emi_Tania/PI_Emi_Tania/pom.xml
+++ b/PI_Emi_Tania/PI_Emi_Tania/pom.xml
@@ -69,6 +69,18 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
 
 	</dependencies>
 
