--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/application.properties
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/application.properties
@@ -8,8 +8,8 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%highlight(%level)] [%cyan(%thr
 #JPA CONFIGURATIONS
 #ddl-auto - cuando se ejecuta la aplicacion hace lo que se le indica con la base de datos (create, create-drop, update, validate)
 ## Recordar cambiar el ddl-auto a update luego de correrlo por primera vez.
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jackson.serialization.fail-on-empty-beans=false
