--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/application.properties
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/integrador
 spring.datasource.username=sa
 spring.datasource.password=sa
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
